# macdump

./: .gitignore  DEVELOPMENT.md  LICENSE.md  Makefile  README.md  macdump.py  pyproject.toml
src/macdump/: __main__.py  file.py  log.py  shared.py  system.py
