[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macdump"
version = "1.0.1"
description = "Dump macOS 1.8+ system user hashes"
readme = "README.md"
authors = [{ name = "Dominic Breuker", email = "admin@dominicbreuker.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["hashcat", "macos", "hashdump"]
dependencies = []
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "pytest"]

[project.urls]
Homepage = "https://github.com/dominicbreuker/macdump"

[project.scripts]
macdump = "macdump.__main__:main"

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/macdump/__init__.py" = [
    '__version__ = "{version}"',
]
